--- a/package.json
+++ b/package.json
@@ -12,33 +12,33 @@
     "type": "git"
   },
   "scripts": {
-    "dev": "vite --port 3333 --open",
+    "dev": "vite --port 3333 --open --host",
     "build": "cross-env NODE_ENV=production vite-ssg build",
     "preview": "vite preview",
     "preview-https": "serve dist",
     "update:meta": "ts-node-script scripts/update.ts"
   },
   "dependencies": {
-    "@vueuse/core": "^5.1.3",
+    "@vueuse/core": "^5.1.4",
     "@vueuse/head": "^0.6.0",
     "nprogress": "^0.2.0",
     "prism-theme-vars": "^0.2.2",
     "sass": "^1.35.2",
     "vue": "^3.1.4",
-    "vue-i18n": "^9.1.6",
+    "vue-i18n": "^9.1.7",
     "vue-router": "^4.0.10"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.7.0",
     "@iconify/json": "^1.1.374",
     "@intlify/vite-plugin-vue-i18n": "^2.3.2",
-    "@types/node": "^16.3.1",
+    "@types/node": "^16.3.3",
     "@types/nprogress": "^0.2.0",
     "@typescript-eslint/eslint-plugin": "^4.28.3",
     "@vitejs/plugin-vue": "^1.2.5",
     "@vue/compiler-sfc": "^3.1.4",
     "@vue/server-renderer": "^3.1.4",
-    "@yunyoujun/logger": "^0.1.2",
+    "@yunyoujun/logger": "^0.1.4",
     "cross-env": "^7.0.3",
     "eslint": "^7.30.0",
     "https-localhost": "^4.6.5",
