--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "markdown-it-link-attributes": "^3.0.0",
     "markdown-it-prism": "^2.1.8",
     "pnpm": "^6.10.0",
+    "@slidev/cli": "^0.22.7",
+    "@slidev/theme-default": "*",
     "ts-node": "^10.1.0",
     "typescript": "^4.3.5",
     "vite": "^2.4.2",
