🏷️ release explosions for placeholder

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "explosions",
   "description": "(∩ ◕_▩ )⊃━☆ Explosion！",
-  "private": true,
+  "version": "0.0.1",
   "author": {
     "email": "me@yunyoujun.cn",
     "name": "YunYouJun",
