--- a/package.json
+++ b/package.json
@@ -20,43 +20,44 @@
     "update:meta": "ts-node-script scripts/update.ts"
   },
   "dependencies": {
-    "@vueuse/core": "^5.1.4",
+    "@vueuse/core": "^6.3.2",
     "@vueuse/head": "^0.6.0",
     "nprogress": "^0.2.0",
     "prism-theme-vars": "^0.2.2",
-    "sass": "^1.35.2",
-    "vue": "^3.1.4",
-    "vue-i18n": "^9.1.7",
-    "vue-router": "^4.0.10"
+    "sass": "^1.39.2",
+    "vue": "^2.6.14",
+    "vue-i18n": "^8.25.0",
+    "vue-router": "^3.5.2"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^0.7.0",
-    "@iconify/json": "^1.1.374",
-    "@intlify/vite-plugin-vue-i18n": "^2.3.2",
-    "@types/node": "^16.3.3",
+    "@antfu/eslint-config": "^0.8.1",
+    "@iconify/json": "^1.1.400",
+    "@intlify/vite-plugin-vue-i18n": "^2.4.0",
+    "@types/node": "^16.9.1",
     "@types/nprogress": "^0.2.0",
-    "@typescript-eslint/eslint-plugin": "^4.28.3",
-    "@vitejs/plugin-vue": "^1.2.5",
-    "@vue/compiler-sfc": "^3.1.4",
-    "@vue/server-renderer": "^3.1.4",
+    "@typescript-eslint/eslint-plugin": "^4.31.0",
+    "@vitejs/plugin-vue": "^1.6.2",
+    "@vue/compiler-sfc": "^3.2.11",
+    "@vue/server-renderer": "^3.2.11",
     "@yunyoujun/logger": "^0.1.4",
     "cross-env": "^7.0.3",
-    "eslint": "^7.30.0",
-    "https-localhost": "^4.6.5",
+    "eslint": "^7.32.0",
+    "https-localhost": "^4.7.0",
     "markdown-it-link-attributes": "^3.0.0",
-    "markdown-it-prism": "^2.1.8",
-    "pnpm": "^6.10.0",
+    "markdown-it-prism": "^2.2.0",
+    "pnpm": "^6.14.7",
     "ts-node": "^10.2.1",
-    "typescript": "^4.3.5",
-    "vite": "^2.4.2",
-    "vite-plugin-components": "^0.12.2",
-    "vite-plugin-icons": "^0.6.5",
-    "vite-plugin-md": "^0.6.7",
-    "vite-plugin-pages": "^0.15.0",
-    "vite-plugin-pwa": "^0.8.1",
-    "vite-plugin-vue-layouts": "^0.3.1",
-    "vite-plugin-windicss": "^1.2.4",
-    "vite-ssg": "^0.11.4",
-    "vue-tsc": "^0.2.0"
+    "typescript": "^4.4.2",
+    "unplugin-auto-import": "^0.4.5",
+    "unplugin-icons": "^0.7.6",
+    "unplugin-vue-components": "^0.15.0",
+    "vite": "^2.5.6",
+    "vite-plugin-md": "^0.11.0",
+    "vite-plugin-pages": "^0.18.0",
+    "vite-plugin-pwa": "^0.11.2",
+    "vite-plugin-vue-layouts": "^0.4.1",
+    "vite-plugin-windicss": "^1.4.2",
+    "vite-ssg": "^0.15.1",
+    "vue-tsc": "^0.3.0"
   }
 }
