--- a/package.json
+++ b/package.json
@@ -22,17 +22,20 @@
   "dependencies": {
     "@vueuse/core": "^6.3.2",
     "@vueuse/head": "^0.6.0",
+    "@vueuse/motion": "^2.0.0-beta.1",
     "nprogress": "^0.2.0",
     "prism-theme-vars": "^0.2.2",
     "sass": "^1.39.2",
-    "vue": "^2.6.14",
-    "vue-i18n": "^8.25.0",
-    "vue-router": "^3.5.2"
+    "vue": "^3.2.11",
+    "vue-demi": "^0.11.4",
+    "vue-i18n": "^9.1.7",
+    "vue-router": "^4.0.11"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.8.1",
     "@iconify/json": "^1.1.400",
     "@intlify/vite-plugin-vue-i18n": "^2.4.0",
+    "@types/markdown-it-link-attributes": "^3.0.1",
     "@types/node": "^16.9.1",
     "@types/nprogress": "^0.2.0",
     "@typescript-eslint/eslint-plugin": "^4.31.0",
