--- a/package.json
+++ b/package.json
@@ -15,52 +15,58 @@
     "dev": "vite --port 3333 --open --host",
     "build": "cross-env NODE_ENV=production vite-ssg build",
     "build:lib": "vite build --mode lib",
+    "lint": "eslint \"**/*.{vue,ts,js}\"",
     "preview": "vite preview",
     "preview-https": "serve dist",
     "update:meta": "ts-node-script scripts/update.ts"
   },
   "dependencies": {
-    "@vueuse/core": "^6.3.2",
-    "@vueuse/head": "^0.6.0",
-    "@vueuse/motion": "^2.0.0-beta.1",
+    "@vueuse/core": "^6.9.1",
+    "@vueuse/head": "^0.7.0",
+    "@vueuse/motion": "^2.0.0-beta.4",
     "nprogress": "^0.2.0",
+    "pinia": "^2.0.3",
     "prism-theme-vars": "^0.2.2",
-    "sass": "^1.39.2",
-    "vue": "^3.2.11",
-    "vue-demi": "^0.11.4",
-    "vue-i18n": "^9.1.7",
-    "vue-router": "^4.0.11"
+    "sass": "^1.43.4",
+    "vue": "^3.2.22",
+    "vue-about-me": "^1.2.0",
+    "vue-demi": "^0.12.1",
+    "vue-i18n": "^9.1.9",
+    "vue-router": "^4.0.12"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^0.8.1",
-    "@iconify/json": "^1.1.400",
-    "@intlify/vite-plugin-vue-i18n": "^2.4.0",
+    "@antfu/eslint-config": "^0.10.0",
+    "@iconify-json/carbon": "^1.0.10",
+    "@iconify-json/icon-park-outline": "^1.0.1",
+    "@iconify-json/ri": "^1.0.1",
+    "@intlify/vite-plugin-vue-i18n": "^3.1.0",
     "@types/markdown-it-link-attributes": "^3.0.1",
-    "@types/node": "^16.9.1",
+    "@types/node": "^16.11.7",
     "@types/nprogress": "^0.2.0",
-    "@typescript-eslint/eslint-plugin": "^4.31.0",
-    "@vitejs/plugin-vue": "^1.6.2",
-    "@vue/compiler-sfc": "^3.2.11",
-    "@vue/server-renderer": "^3.2.11",
+    "@typescript-eslint/eslint-plugin": "^5.4.0",
+    "@vitejs/plugin-vue": "^1.9.4",
+    "@vue/compiler-sfc": "^3.2.22",
+    "@vue/server-renderer": "^3.2.22",
     "@yunyoujun/logger": "^0.1.4",
+    "critters": "^0.0.14",
     "cross-env": "^7.0.3",
-    "eslint": "^7.32.0",
+    "eslint": "^8.2.0",
     "https-localhost": "^4.7.0",
     "markdown-it-link-attributes": "^3.0.0",
-    "markdown-it-prism": "^2.2.0",
-    "pnpm": "^6.14.7",
-    "ts-node": "^10.2.1",
-    "typescript": "^4.4.2",
-    "unplugin-auto-import": "^0.4.5",
-    "unplugin-icons": "^0.7.6",
-    "unplugin-vue-components": "^0.15.0",
-    "vite": "^2.5.6",
-    "vite-plugin-md": "^0.11.0",
-    "vite-plugin-pages": "^0.18.0",
-    "vite-plugin-pwa": "^0.11.2",
-    "vite-plugin-vue-layouts": "^0.4.1",
-    "vite-plugin-windicss": "^1.4.2",
-    "vite-ssg": "^0.15.1",
-    "vue-tsc": "^0.3.0"
+    "markdown-it-prism": "^2.2.1",
+    "pnpm": "^6.22.2",
+    "ts-node": "^10.4.0",
+    "typescript": "^4.5.2",
+    "unplugin-auto-import": "^0.4.14",
+    "unplugin-icons": "^0.12.18",
+    "unplugin-vue-components": "^0.17.2",
+    "vite": "^2.6.14",
+    "vite-plugin-md": "^0.11.4",
+    "vite-plugin-pages": "^0.18.2",
+    "vite-plugin-pwa": "^0.11.5",
+    "vite-plugin-vue-layouts": "^0.5.0",
+    "vite-plugin-windicss": "^1.5.1",
+    "vite-ssg": "^0.16.1",
+    "vue-tsc": "^0.29.5"
   }
 }
