--- a/package.json
+++ b/package.json
@@ -16,60 +16,60 @@
     "build": "cross-env NODE_ENV=production vite-ssg build",
     "build:lib": "vite build --mode lib",
     "lint": "eslint \"**/*.{vue,ts,js}\"",
+    "index": "esno scripts/update.ts",
     "preview": "vite preview",
     "preview-https": "serve dist",
     "update:meta": "ts-node-script scripts/update.ts"
   },
   "dependencies": {
-    "@ctrl/tinycolor": "^3.4.0",
-    "@vueuse/core": "^6.9.1",
-    "@vueuse/head": "^0.7.2",
-    "@vueuse/motion": "^2.0.0-beta.4",
+    "@ctrl/tinycolor": "^3.4.1",
+    "@vueuse/core": "^8.3.1",
+    "@vueuse/head": "^0.7.6",
+    "@vueuse/motion": "^2.0.0-beta.12",
     "nprogress": "^0.2.0",
-    "pinia": "^2.0.3",
+    "pinia": "^2.0.13",
     "prism-theme-vars": "^0.2.2",
-    "sass": "^1.43.4",
-    "vue": "^3.2.22",
-    "vue-about-me": "^1.2.0",
-    "vue-demi": "^0.12.1",
+    "sass": "^1.51.0",
+    "vue": "^3.2.33",
+    "vue-about-me": "^1.2.7",
+    "vue-demi": "^0.12.5",
     "vue-i18n": "^9.1.9",
-    "vue-router": "^4.0.12"
+    "vue-router": "^4.0.14"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^0.10.0",
-    "@iconify-json/carbon": "^1.0.10",
-    "@iconify-json/icon-park-outline": "^1.0.1",
-    "@iconify-json/mdi": "^1.0.9",
-    "@iconify-json/ri": "^1.0.1",
-    "@intlify/vite-plugin-vue-i18n": "^3.1.0",
+    "@antfu/eslint-config": "^0.21.1",
+    "@iconify-json/carbon": "^1.1.3",
+    "@iconify-json/icon-park-outline": "^1.1.1",
+    "@iconify-json/mdi": "^1.1.10",
+    "@iconify-json/ri": "^1.1.1",
+    "@intlify/vite-plugin-vue-i18n": "^3.4.0",
     "@types/markdown-it-link-attributes": "^3.0.1",
-    "@types/node": "^16.11.7",
+    "@types/node": "^17.0.30",
     "@types/nprogress": "^0.2.0",
-    "@typescript-eslint/eslint-plugin": "^5.4.0",
-    "@vitejs/plugin-vue": "^1.9.4",
-    "@vue/compiler-sfc": "^3.2.22",
-    "@vue/server-renderer": "^3.2.22",
-    "@yunyoujun/logger": "^0.1.4",
-    "critters": "^0.0.14",
+    "@types/p5": "^1.4.2",
+    "@vitejs/plugin-vue": "^2.3.1",
+    "@yunyoujun/logger": "^0.2.3",
+    "critters": "^0.0.16",
     "cross-env": "^7.0.3",
-    "eslint": "^8.2.0",
+    "eslint": "^8.14.0",
     "gray-matter": "^4.0.3",
-    "https-localhost": "^4.7.0",
-    "markdown-it-link-attributes": "^3.0.0",
-    "markdown-it-prism": "^2.2.1",
-    "pnpm": "^6.22.2",
-    "ts-node": "^10.4.0",
-    "typescript": "^4.5.2",
-    "unplugin-auto-import": "^0.4.14",
-    "unplugin-icons": "^0.12.18",
-    "unplugin-vue-components": "^0.17.2",
-    "vite": "^2.6.14",
-    "vite-plugin-md": "^0.11.4",
-    "vite-plugin-pages": "^0.18.2",
-    "vite-plugin-pwa": "^0.11.5",
-    "vite-plugin-vue-layouts": "^0.5.0",
-    "vite-plugin-windicss": "^1.5.1",
-    "vite-ssg": "^0.16.1",
-    "vue-tsc": "^0.29.5"
+    "https-localhost": "^4.7.1",
+    "markdown-it-link-attributes": "^4.0.0",
+    "markdown-it-prism": "^2.2.4",
+    "p5": "^1.4.1",
+    "pnpm": "^6.32.11",
+    "ts-node": "^10.7.0",
+    "typescript": "^4.6.4",
+    "unplugin-auto-import": "^0.7.1",
+    "unplugin-icons": "^0.14.1",
+    "unplugin-vue-components": "^0.19.3",
+    "vite": "^2.9.6",
+    "vite-plugin-md": "^0.13.0",
+    "vite-plugin-pages": "^0.23.0",
+    "vite-plugin-pwa": "^0.12.0",
+    "vite-plugin-vue-layouts": "^0.6.0",
+    "vite-plugin-windicss": "^1.8.4",
+    "vite-ssg": "^0.19.2",
+    "vue-tsc": "^0.34.11"
   }
 }
