--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "markdown-it-prism": "^2.2.4",
     "p5": "^1.4.1",
     "pnpm": "^6.32.11",
+    "star-markdown-css": "^0.3.3",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.4",
     "unplugin-auto-import": "^0.7.1",
