--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "type": "module",
   "name": "explosions",
   "description": "(∩ ◕_▩ )⊃━☆ Explosion！",
   "version": "0.0.1",
@@ -23,8 +24,8 @@
   },
   "dependencies": {
     "@ctrl/tinycolor": "^3.4.1",
-    "@vueuse/core": "^8.3.1",
-    "@vueuse/head": "^0.7.6",
+    "@vueuse/core": "^9.4.0",
+    "@vueuse/head": "^0.9.8",
     "@vueuse/motion": "^2.0.0-beta.12",
     "nprogress": "^0.2.0",
     "pinia": "^2.0.13",
@@ -32,22 +33,22 @@
     "sass": "^1.51.0",
     "vue": "^3.2.33",
     "vue-about-me": "^1.2.7",
-    "vue-demi": "^0.12.5",
+    "vue-demi": "^0.13.11",
     "vue-i18n": "^9.1.9",
     "vue-router": "^4.0.14"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^0.21.1",
+    "@antfu/eslint-config": "^0.27.0",
     "@iconify-json/carbon": "^1.1.3",
     "@iconify-json/icon-park-outline": "^1.1.1",
     "@iconify-json/mdi": "^1.1.10",
     "@iconify-json/ri": "^1.1.1",
-    "@intlify/vite-plugin-vue-i18n": "^3.4.0",
+    "@intlify/vite-plugin-vue-i18n": "^6.0.3",
     "@types/markdown-it-link-attributes": "^3.0.1",
-    "@types/node": "^17.0.30",
+    "@types/node": "^18.11.7",
     "@types/nprogress": "^0.2.0",
     "@types/p5": "^1.4.2",
-    "@vitejs/plugin-vue": "^2.3.1",
+    "@vitejs/plugin-vue": "^3.2.0",
     "@yunyoujun/logger": "^0.2.3",
     "critters": "^0.0.16",
     "cross-env": "^7.0.3",
@@ -57,20 +58,21 @@
     "markdown-it-link-attributes": "^4.0.0",
     "markdown-it-prism": "^2.2.4",
     "p5": "^1.4.1",
-    "pnpm": "^6.32.11",
-    "star-markdown-css": "^0.3.3",
+    "pnpm": "^7.14.0",
+    "star-markdown-css": "^0.4.1",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.4",
-    "unplugin-auto-import": "^0.7.1",
+    "unplugin-auto-import": "^0.11.4",
     "unplugin-icons": "^0.14.1",
-    "unplugin-vue-components": "^0.19.3",
-    "vite": "^2.9.6",
-    "vite-plugin-md": "^0.13.0",
-    "vite-plugin-pages": "^0.23.0",
-    "vite-plugin-pwa": "^0.12.0",
-    "vite-plugin-vue-layouts": "^0.6.0",
+    "unplugin-vue-components": "^0.22.9",
+    "vite": "^3.2.0",
+    "vite-plugin-pages": "^0.27.1",
+    "vite-plugin-pwa": "^0.13.1",
+    "vite-plugin-vue-layouts": "^0.7.0",
+    "vite-plugin-vue-markdown": "^0.22.1",
     "vite-plugin-windicss": "^1.8.4",
-    "vite-ssg": "^0.19.2",
-    "vue-tsc": "^0.34.11"
+    "vite-ssg": "^0.21.1",
+    "vite-ssg-sitemap": "^0.4.3",
+    "vue-tsc": "^1.0.9"
   }
 }
