--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "index": "esno scripts/update.ts",
     "preview": "vite preview",
     "preview-https": "serve dist",
-    "update:meta": "ts-node-script scripts/update.ts"
+    "update:meta": "tsx scripts/update.ts"
   },
   "dependencies": {
     "@ctrl/tinycolor": "^3.4.1",
@@ -60,7 +60,7 @@
     "p5": "^1.4.1",
     "pnpm": "^7.14.0",
     "star-markdown-css": "^0.4.1",
-    "ts-node": "^10.7.0",
+    "tsx": "^3.11.0",
     "typescript": "^4.6.4",
     "unplugin-auto-import": "^0.11.4",
     "unplugin-icons": "^0.14.1",
