--- a/package.json
+++ b/package.json
@@ -23,56 +23,56 @@
     "update:meta": "tsx scripts/update.ts"
   },
   "dependencies": {
-    "@ctrl/tinycolor": "^3.4.1",
-    "@vueuse/core": "^9.4.0",
-    "@vueuse/head": "^0.9.8",
-    "@vueuse/motion": "^2.0.0-beta.12",
+    "@ctrl/tinycolor": "^3.6.0",
+    "@vueuse/core": "^10.1.2",
+    "@vueuse/head": "^1.1.26",
+    "@vueuse/motion": "^2.0.0",
     "nprogress": "^0.2.0",
-    "pinia": "^2.0.13",
+    "pinia": "^2.1.4",
     "prism-theme-vars": "^0.2.2",
-    "sass": "^1.51.0",
-    "vue": "^3.2.33",
+    "sass": "^1.63.4",
+    "vue": "^3.3.4",
     "vue-about-me": "^1.2.7",
-    "vue-demi": "^0.13.11",
+    "vue-demi": "^0.14.5",
     "vue-i18n": "^9.1.9",
-    "vue-router": "^4.0.14"
+    "vue-router": "^4.2.2"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^0.27.0",
-    "@iconify-json/carbon": "^1.1.3",
-    "@iconify-json/icon-park-outline": "^1.1.1",
-    "@iconify-json/mdi": "^1.1.10",
-    "@iconify-json/ri": "^1.1.1",
-    "@intlify/vite-plugin-vue-i18n": "^6.0.3",
+    "@antfu/eslint-config": "^0.39.5",
+    "@iconify-json/carbon": "^1.1.18",
+    "@iconify-json/icon-park-outline": "^1.1.11",
+    "@iconify-json/mdi": "^1.1.52",
+    "@iconify-json/ri": "^1.1.9",
+    "@intlify/unplugin-vue-i18n": "^0.11.0",
     "@types/markdown-it-link-attributes": "^3.0.1",
-    "@types/node": "^18.11.7",
+    "@types/node": "^20.3.1",
     "@types/nprogress": "^0.2.0",
-    "@types/p5": "^1.4.2",
-    "@vitejs/plugin-vue": "^3.2.0",
-    "@yunyoujun/logger": "^0.2.3",
-    "critters": "^0.0.16",
+    "@types/p5": "^1.6.2",
+    "@vitejs/plugin-vue": "^4.2.3",
+    "@yunyoujun/logger": "^0.3.5",
+    "critters": "^0.0.18",
     "cross-env": "^7.0.3",
-    "eslint": "^8.14.0",
+    "eslint": "^8.42.0",
     "gray-matter": "^4.0.3",
     "https-localhost": "^4.7.1",
     "markdown-it-link-attributes": "^4.0.0",
     "markdown-it-prism": "^2.2.4",
-    "p5": "^1.4.1",
-    "pnpm": "^7.14.0",
-    "star-markdown-css": "^0.4.1",
-    "tsx": "^3.11.0",
-    "typescript": "^4.6.4",
-    "unplugin-auto-import": "^0.11.4",
-    "unplugin-icons": "^0.14.1",
-    "unplugin-vue-components": "^0.22.9",
-    "vite": "^3.2.0",
-    "vite-plugin-pages": "^0.27.1",
-    "vite-plugin-pwa": "^0.13.1",
-    "vite-plugin-vue-layouts": "^0.7.0",
-    "vite-plugin-vue-markdown": "^0.22.1",
-    "vite-plugin-windicss": "^1.8.4",
-    "vite-ssg": "^0.21.1",
-    "vite-ssg-sitemap": "^0.4.3",
-    "vue-tsc": "^1.0.9"
+    "p5": "^1.6.0",
+    "pnpm": "^8.6.2",
+    "star-markdown-css": "^0.4.2",
+    "tsx": "^3.12.7",
+    "typescript": "^5.1.3",
+    "unplugin-auto-import": "^0.16.4",
+    "unplugin-icons": "^0.16.3",
+    "unplugin-vue-components": "^0.25.1",
+    "vite": "^4.3.9",
+    "vite-plugin-pages": "^0.31.0",
+    "vite-plugin-pwa": "^0.16.4",
+    "vite-plugin-vue-layouts": "^0.8.0",
+    "vite-plugin-vue-markdown": "^0.23.5",
+    "vite-plugin-windicss": "^1.9.0",
+    "vite-ssg": "^0.22.2",
+    "vite-ssg-sitemap": "^0.5.1",
+    "vue-tsc": "^1.6.5"
   }
 }
