--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "type": "module",
   "name": "explosions",
+  "packageManager": "pnpm@8.6.2",
   "description": "(∩ ◕_▩ )⊃━☆ Explosion！",
   "version": "0.0.1",
   "author": {
@@ -20,6 +21,7 @@
     "index": "esno scripts/update.ts",
     "preview": "vite preview",
     "preview-https": "serve dist",
+    "typecheck": "vue-tsc --noEmit",
     "update:meta": "tsx scripts/update.ts"
   },
   "dependencies": {
@@ -29,12 +31,12 @@
     "@vueuse/motion": "^2.0.0",
     "nprogress": "^0.2.0",
     "pinia": "^2.1.4",
-    "prism-theme-vars": "^0.2.2",
+    "prism-theme-vars": "^0.2.4",
     "sass": "^1.63.4",
     "vue": "^3.3.4",
     "vue-about-me": "^1.2.7",
     "vue-demi": "^0.14.5",
-    "vue-i18n": "^9.1.9",
+    "vue-i18n": "^9.2.2",
     "vue-router": "^4.2.2"
   },
   "devDependencies": {
@@ -55,13 +57,14 @@
     "eslint": "^8.42.0",
     "gray-matter": "^4.0.3",
     "https-localhost": "^4.7.1",
-    "markdown-it-link-attributes": "^4.0.0",
-    "markdown-it-prism": "^2.2.4",
+    "markdown-it-link-attributes": "^4.0.1",
+    "markdown-it-prism": "^2.3.0",
     "p5": "^1.6.0",
     "pnpm": "^8.6.2",
     "star-markdown-css": "^0.4.2",
     "tsx": "^3.12.7",
     "typescript": "^5.1.3",
+    "unocss": "^0.53.1",
     "unplugin-auto-import": "^0.16.4",
     "unplugin-icons": "^0.16.3",
     "unplugin-vue-components": "^0.25.1",
@@ -70,7 +73,6 @@
     "vite-plugin-pwa": "^0.16.4",
     "vite-plugin-vue-layouts": "^0.8.0",
     "vite-plugin-vue-markdown": "^0.23.5",
-    "vite-plugin-windicss": "^1.9.0",
     "vite-ssg": "^0.22.2",
     "vite-ssg-sitemap": "^0.5.1",
     "vue-tsc": "^1.6.5"
