feat: add @yunlefun/vue-components & thumbs-up

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "build:lib": "vite build --mode lib",
     "lint": "eslint \"**/*.{vue,ts,js}\"",
     "index": "esno scripts/update.ts",
+    "postinstall": "npm run update:meta",
     "preview": "vite preview",
     "preview-https": "serve dist",
     "typecheck": "vue-tsc --noEmit",
@@ -41,6 +42,7 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.39.5",
+    "@headlessui/vue": "^1.7.14",
     "@iconify-json/carbon": "^1.1.18",
     "@iconify-json/icon-park-outline": "^1.1.11",
     "@iconify-json/mdi": "^1.1.52",
@@ -51,6 +53,8 @@
     "@types/nprogress": "^0.2.0",
     "@types/p5": "^1.6.2",
     "@vitejs/plugin-vue": "^4.2.3",
+    "@yunlefun/ui": "^0.0.1",
+    "@yunlefun/vue-components": "0.0.5-beta.4",
     "@yunyoujun/logger": "^0.3.5",
     "critters": "^0.0.18",
     "cross-env": "^7.0.3",
