--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "baseUrl": ".",
     "module": "ESNext",
-    "target": "es2016",
+    "target": "ES2017",
     "lib": ["DOM", "ESNext"],
     "strict": true,
     "esModuleInterop": true,
