--- a/packages/badge-rotation/tsconfig.json
+++ b/packages/badge-rotation/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "include": ["index.ts"],
+  "include": ["src/index.ts"],
   "compilerOptions": {
     "outDir": "dist",
     "declaration": true
