--- a/slides/badge-rotation/.eslintrc
+++ b/slides/badge-rotation/.eslintrc
@@ -1,10 +1,9 @@
 {
   "extends": [
-    "@antfu",
-    "@unocss"
+    "@antfu"
   ],
   "rules": {
     "no-console": "off",
-    "unicorn/no-new-array": "warn"
+    "@typescript-eslint/no-invalid-this": "warn"
   }
 }
