--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,7 @@
     "forceConsistentCasingInFileNames": true,
     "paths": {
       "~/*": ["./playground/*"],
-      "@explosions/*": ["packages/*"]
+      "@explosions/*": ["packages/*/src/index.ts"]
     }
   },
   "exclude": ["dist", "node_modules", "cypress"]
