--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "markdown-it-prism": "^2.3.0",
     "pnpm": "^8.6.12",
     "star-markdown-css": "^0.4.2",
+    "tsup": "^7.2.0",
     "tsx": "^3.12.7",
     "typescript": "^5.1.6",
     "vue-tsc": "^1.8.8"
