--- a/slides/badge-rotation/package.json
+++ b/slides/badge-rotation/package.json
@@ -7,15 +7,24 @@
     "export": "slidev export"
   },
   "dependencies": {
-    "@slidev/cli": "^0.42.8",
-    "@slidev/theme-default": "latest",
-    "@slidev/theme-seriph": "latest"
+    "@slidev/cli": "0.35.4",
+    "@slidev/theme-default": "0.21.2"
   },
   "slidev": {
     "colorSchema": "dark"
   },
   "devDependencies": {
+    "@iconify-json/carbon": "^1.1.19",
     "@iconify-json/eos-icons": "^1.1.7",
-    "@iconify-json/vaadin": "^1.1.6"
+    "@iconify-json/ic": "^1.1.14",
+    "@iconify-json/icon-park-outline": "^1.1.12",
+    "@iconify-json/ion": "^1.1.12",
+    "@iconify-json/mdi": "^1.1.54",
+    "@iconify-json/noto": "^1.1.12",
+    "@iconify-json/ph": "^1.1.6",
+    "@iconify-json/pixelarticons": "^1.1.7",
+    "@iconify-json/uiw": "^1.1.8",
+    "@iconify-json/vaadin": "^1.1.6",
+    "@iconify-json/whh": "^1.1.5"
   }
 }
