--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@iconify-json/icon-park-outline": "^1.1.12",
     "@iconify-json/mdi": "^1.1.54",
     "@iconify-json/ri": "^1.1.12",
+    "@iconify-json/simple-icons": "^1.1.66",
     "@intlify/unplugin-vue-i18n": "^0.12.3",
     "@types/markdown-it-link-attributes": "^3.0.1",
     "@types/node": "^20.5.1",
