--- a/packages/fireworks/package.json
+++ b/packages/fireworks/package.json
@@ -9,5 +9,10 @@
     "@ctrl/tinycolor": "^3.6.0",
     "@types/animejs": "^3.1.7",
     "animejs": "^3.2.1"
+  },
+  "homepage": "https://explosions.yunyoujun.cn/fireworks",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/YunYouJun/explosions"
   }
 }
