--- a/packages/fireworks/package.json
+++ b/packages/fireworks/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@explosions/fireworks",
-  "version": "0.0.1",
+  "version": "0.0.2",
+  "main": "dist/index.js",
   "scripts": {
     "prepublishOnly": "npm run build",
     "build": "tsup"
