--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "explosions",
   "type": "module",
   "version": "0.0.1",
-  "packageManager": "pnpm@8.6.12",
+  "packageManager": "pnpm@8.15.4",
   "description": "(∩ ◕_▩ )⊃━☆ Explosion！",
   "author": {
     "email": "me@yunyoujun.cn",
@@ -22,34 +22,39 @@
     "preview": "vite preview",
     "preview-https": "serve dist",
     "typecheck": "vue-tsc --noEmit",
-    "update:meta": "pnpm -C scripts run update"
+    "update:meta": "pnpm -C scripts run update",
+    "docs:dev": "vitepress dev docs",
+    "docs:build": "vitepress build docs",
+    "docs:preview": "vitepress preview docs"
   },
   "dependencies": {
-    "@ctrl/tinycolor": "^3.6.0",
+    "@ctrl/tinycolor": "^4.0.3",
     "prism-theme-vars": "^0.2.4",
-    "sass": "^1.66.1"
+    "sass": "^1.71.1"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^0.40.2",
-    "@iconify-json/carbon": "^1.1.19",
-    "@iconify-json/icon-park-outline": "^1.1.12",
-    "@iconify-json/mdi": "^1.1.54",
-    "@iconify-json/ri": "^1.1.12",
-    "@iconify-json/simple-icons": "^1.1.66",
-    "@intlify/unplugin-vue-i18n": "^0.12.3",
-    "@types/markdown-it-link-attributes": "^3.0.1",
-    "@types/node": "^20.5.1",
+    "@antfu/eslint-config": "^2.8.0",
+    "@iconify-json/carbon": "^1.1.31",
+    "@iconify-json/icon-park-outline": "^1.1.15",
+    "@iconify-json/mdi": "^1.1.64",
+    "@iconify-json/ri": "^1.1.20",
+    "@iconify-json/simple-icons": "^1.1.94",
+    "@intlify/unplugin-vue-i18n": "^2.0.0",
+    "@types/markdown-it-link-attributes": "^3.0.4",
+    "@types/node": "^20.11.24",
     "@yunyoujun/logger": "^0.3.5",
-    "eslint": "^8.47.0",
+    "eslint": "^8.57.0",
     "gray-matter": "^4.0.3",
     "https-localhost": "^4.7.1",
     "markdown-it-link-attributes": "^4.0.1",
     "markdown-it-prism": "^2.3.0",
-    "pnpm": "^8.6.12",
+    "nuxt": "^3.10.3",
+    "pnpm": "^8.15.4",
     "star-markdown-css": "^0.4.2",
-    "tsup": "^7.2.0",
-    "tsx": "^3.12.7",
-    "typescript": "^5.1.6",
-    "vue-tsc": "^1.8.8"
+    "tsup": "^8.0.2",
+    "tsx": "^4.7.1",
+    "typescript": "^5.3.3",
+    "vitepress": "1.0.0-rc.44",
+    "vue-tsc": "^1.8.27"
   }
 }
