--- a/packages/badge-rotation/tsconfig.json
+++ b/packages/badge-rotation/tsconfig.json
@@ -1,7 +1,7 @@
 {
-  "include": ["src/index.ts"],
   "compilerOptions": {
-    "outDir": "dist",
-    "declaration": true
-  }
+    "declaration": true,
+    "outDir": "dist"
+  },
+  "include": ["src/index.ts"]
 }
