--- a/playground/package.json
+++ b/playground/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "packageManager": "pnpm@8.6.12",
+  "packageManager": "pnpm@8.15.4",
   "scripts": {
     "build": "nuxi build",
     "dev": "nuxi dev",
@@ -13,31 +13,32 @@
     "start:generate": "npx serve .output/public"
   },
   "dependencies": {
-    "@headlessui/vue": "^1.7.16",
-    "@vueuse/motion": "^2.0.0",
+    "@headlessui/vue": "^1.7.19",
+    "@vueuse/motion": "^2.1.0",
     "@yunlefun/ui": "^0.0.1",
-    "p5": "^1.7.0",
+    "p5": "^1.9.1",
     "vue-about-me": "^1.2.7"
   },
   "devDependencies": {
-    "@iconify-json/carbon": "^1.1.19",
-    "@iconify-json/twemoji": "^1.1.12",
-    "@nuxt/devtools": "^0.8.0",
-    "@nuxtjs/color-mode": "^3.3.0",
-    "@nuxtjs/i18n": "8.0.0-rc.3",
-    "@pinia/nuxt": "^0.4.11",
-    "@types/p5": "^1.6.2",
-    "@unocss/eslint-config": "^0.55.2",
-    "@unocss/nuxt": "^0.55.2",
-    "@vite-pwa/nuxt": "^0.1.0",
-    "@vueuse/nuxt": "^10.3.0",
-    "@yunlefun/vue": "^0.0.7",
+    "@iconify-json/carbon": "^1.1.31",
+    "@iconify-json/twemoji": "^1.1.15",
+    "@nuxt/devtools": "^1.0.8",
+    "@nuxtjs/color-mode": "^3.3.2",
+    "@nuxtjs/i18n": "8.1.1",
+    "@pinia/nuxt": "^0.5.1",
+    "@types/p5": "^1.7.6",
+    "@unocss/eslint-config": "^0.58.5",
+    "@unocss/nuxt": "^0.58.5",
+    "@vite-pwa/nuxt": "^0.5.0",
+    "@vueuse/nuxt": "^10.9.0",
+    "@yunlefun/vue": "^0.1.1",
     "consola": "^3.2.3",
-    "eslint": "^8.47.0",
-    "nuxt": "^3.6.5",
-    "pinia": "^2.1.6",
-    "typescript": "^5.1.6",
-    "vue-i18n": "^9.2.2",
-    "vue-tsc": "^1.8.8"
+    "eslint": "^8.57.0",
+    "nuxt": "^3.10.3",
+    "nuxt-monaco-editor": "^1.2.7",
+    "pinia": "^2.1.7",
+    "typescript": "^5.3.3",
+    "vue-i18n": "^9.10.1",
+    "vue-tsc": "^1.8.27"
   }
 }
