--- a/slides/badge-rotation/package.json
+++ b/slides/badge-rotation/package.json
@@ -7,24 +7,24 @@
     "export": "slidev export"
   },
   "dependencies": {
-    "@slidev/cli": "0.35.4",
-    "@slidev/theme-default": "0.21.2"
+    "@slidev/cli": "0.48.0-beta.19",
+    "@slidev/theme-default": "0.25.0"
   },
   "slidev": {
     "colorSchema": "dark"
   },
   "devDependencies": {
-    "@iconify-json/carbon": "^1.1.19",
-    "@iconify-json/eos-icons": "^1.1.7",
-    "@iconify-json/ic": "^1.1.14",
-    "@iconify-json/icon-park-outline": "^1.1.12",
-    "@iconify-json/ion": "^1.1.12",
-    "@iconify-json/mdi": "^1.1.54",
-    "@iconify-json/noto": "^1.1.12",
-    "@iconify-json/ph": "^1.1.6",
-    "@iconify-json/pixelarticons": "^1.1.7",
-    "@iconify-json/uiw": "^1.1.8",
-    "@iconify-json/vaadin": "^1.1.6",
-    "@iconify-json/whh": "^1.1.5"
+    "@iconify-json/carbon": "^1.1.31",
+    "@iconify-json/eos-icons": "^1.1.10",
+    "@iconify-json/ic": "^1.1.17",
+    "@iconify-json/icon-park-outline": "^1.1.15",
+    "@iconify-json/ion": "^1.1.15",
+    "@iconify-json/mdi": "^1.1.64",
+    "@iconify-json/noto": "^1.1.18",
+    "@iconify-json/ph": "^1.1.11",
+    "@iconify-json/pixelarticons": "^1.1.10",
+    "@iconify-json/uiw": "^1.1.11",
+    "@iconify-json/vaadin": "^1.1.9",
+    "@iconify-json/whh": "^1.1.8"
   }
 }
