--- a/docs/package.json
+++ b/docs/package.json
@@ -6,13 +6,13 @@
     "preview": "vitepress preview"
   },
   "dependencies": {
-    "vitepress": "1.0.0-rc.45",
-    "vue": "^3.4.21"
+    "vitepress": "1.1.4",
+    "vue": "^3.4.26"
   },
   "devDependencies": {
-    "monaco-editor": "^0.47.0",
-    "pixi.js": "^8.0.2",
-    "typescript": "^5.4.2",
+    "monaco-editor": "^0.48.0",
+    "pixi.js": "^8.1.0",
+    "typescript": "^5.4.5",
     "unplugin-glsl": "^0.1.9",
     "unplugin-vue-components": "^0.26.0"
   }
