feat(fireworks): add exports for dist

--- a/packages/fireworks/package.json
+++ b/packages/fireworks/package.json
@@ -6,7 +6,15 @@
     "type": "git",
     "url": "https://github.com/YunYouJun/explosions"
   },
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js"
+    }
+  },
   "main": "dist/index.js",
+  "module": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "prepublishOnly": "npm run build",
     "build": "tsup"
