--- a/packages/fireworks/tsconfig.json
+++ b/packages/fireworks/tsconfig.json
@@ -1,7 +1,15 @@
 {
   "compilerOptions": {
-    "baseUrl": ".",
-    "moduleResolution": "NodeNext",
-    "allowSyntheticDefaultImports": true
+    "target": "ESNext",
+    "lib": ["ESNext", "DOM"],
+    "module": "ESNext",
+    "moduleResolution": "Bundler",
+    "resolveJsonModule": true,
+    "strict": true,
+    "strictNullChecks": true,
+    "noEmit": true,
+    "esModuleInterop": true,
+    "skipDefaultLibCheck": true,
+    "skipLibCheck": true
   }
 }
