--- a/playground/package.json
+++ b/playground/package.json
@@ -16,8 +16,7 @@
     "@headlessui/vue": "^1.7.23",
     "@vueuse/motion": "^2.2.5",
     "@yunlefun/ui": "^0.0.1",
-    "p5": "^1.11.0",
-    "vue-about-me": "^1.2.7"
+    "p5": "^1.11.0"
   },
   "devDependencies": {
     "@iconify-json/carbon": "^1.2.1",
@@ -38,6 +37,7 @@
     "nuxt-monaco-editor": "^1.2.9",
     "pinia": "^2.2.4",
     "typescript": "^5.6.2",
+    "vue-about-me": "^1.3.4",
     "vue-i18n": "^9.14.1",
     "vue-tsc": "^2.1.6"
   }
