--- a/playground/package.json
+++ b/playground/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "packageManager": "pnpm@9.12.0",
+  "packageManager": "pnpm@10.8.0",
   "scripts": {
     "build": "nuxi build",
     "dev": "nuxi dev",
@@ -14,31 +14,31 @@
   },
   "dependencies": {
     "@headlessui/vue": "^1.7.23",
-    "@vueuse/motion": "^2.2.5",
+    "@vueuse/motion": "^3.0.3",
     "@yunlefun/ui": "^0.0.1",
-    "p5": "^1.11.0"
+    "p5": "^1.11.3"
   },
   "devDependencies": {
-    "@iconify-json/carbon": "^1.2.1",
-    "@iconify-json/twemoji": "^1.2.0",
-    "@nuxt/devtools": "^1.5.2",
-    "@nuxtjs/color-mode": "^3.5.1",
-    "@nuxtjs/i18n": "8.3.1",
-    "@pinia/nuxt": "^0.5.5",
+    "@iconify-json/carbon": "^1.2.8",
+    "@iconify-json/twemoji": "^1.2.2",
+    "@nuxt/devtools": "^2.3.2",
+    "@nuxtjs/color-mode": "^3.5.2",
+    "@nuxtjs/i18n": "9.5.3",
+    "@pinia/nuxt": "^0.10.1",
     "@types/p5": "^1.7.6",
-    "@unocss/eslint-config": "^0.63.3",
-    "@unocss/nuxt": "^0.63.3",
-    "@vite-pwa/nuxt": "^0.10.5",
-    "@vueuse/nuxt": "^11.1.0",
+    "@unocss/eslint-config": "^66.1.0-beta.10",
+    "@unocss/nuxt": "^66.1.0-beta.10",
+    "@vite-pwa/nuxt": "^1.0.0",
+    "@vueuse/nuxt": "^13.1.0",
     "@yunlefun/vue": "^0.1.1",
-    "consola": "^3.2.3",
-    "eslint": "^9.12.0",
-    "nuxt": "^3.13.2",
-    "nuxt-monaco-editor": "^1.2.9",
-    "pinia": "^2.2.4",
-    "typescript": "^5.6.2",
-    "vue-about-me": "^1.3.4",
-    "vue-i18n": "^9.14.1",
-    "vue-tsc": "^2.1.6"
+    "consola": "^3.4.2",
+    "eslint": "^9.24.0",
+    "nuxt": "^3.16.2",
+    "nuxt-monaco-editor": "^1.3.1",
+    "pinia": "^3.0.1",
+    "typescript": "^5.8.3",
+    "vue-about-me": "^1.4.0",
+    "vue-i18n": "^11.1.3",
+    "vue-tsc": "^2.2.8"
   }
 }
