--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,4 @@
 shamefully-hoist=true
-ignore-workspace-root-check=true
+strict-peer-dependencies=false
+shell-emulator=true
+auto-install-peers=false
