--- a/docs/package.json
+++ b/docs/package.json
@@ -6,14 +6,14 @@
     "preview": "vitepress preview"
   },
   "dependencies": {
-    "vitepress": "1.1.4",
-    "vue": "^3.5.13"
+    "vitepress": "^1.6.4",
+    "vue": "^3.5.18"
   },
   "devDependencies": {
     "monaco-editor": "^0.52.2",
-    "pixi.js": "^8.9.1",
-    "typescript": "^5.8.3",
+    "pixi.js": "^8.12.0",
+    "typescript": "^5.9.2",
     "unplugin-glsl": "^0.1.9",
-    "unplugin-vue-components": "^28.5.0"
+    "unplugin-vue-components": "^29.0.0"
   }
 }
