--- a/playground/package.json
+++ b/playground/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "packageManager": "pnpm@10.8.1",
+  "packageManager": "pnpm@10.14.0",
   "scripts": {
     "build": "nuxi build",
     "dev": "nuxi dev",
@@ -16,29 +16,28 @@
     "@headlessui/vue": "^1.7.23",
     "@vueuse/motion": "^3.0.3",
     "@yunlefun/ui": "^0.0.1",
-    "p5": "^1.11.4"
+    "p5": "^2.0.4"
   },
   "devDependencies": {
-    "@iconify-json/carbon": "^1.2.8",
+    "@iconify-json/carbon": "^1.2.11",
     "@iconify-json/twemoji": "^1.2.2",
-    "@nuxt/devtools": "^2.4.0",
+    "@nuxt/devtools": "^2.6.2",
     "@nuxtjs/color-mode": "^3.5.2",
-    "@nuxtjs/i18n": "9.5.3",
-    "@pinia/nuxt": "^0.11.0",
+    "@nuxtjs/i18n": "^10.0.4",
+    "@pinia/nuxt": "^0.11.2",
     "@types/p5": "^1.7.6",
-    "@unocss/eslint-config": "^66.1.0-beta.11",
-    "@unocss/nuxt": "^66.1.0-beta.11",
-    "@vite-pwa/nuxt": "^1.0.0",
-    "@vueuse/nuxt": "^13.1.0",
+    "@unocss/eslint-config": "^66.4.2",
+    "@unocss/nuxt": "^66.4.2",
+    "@vite-pwa/nuxt": "^1.0.4",
+    "@vueuse/nuxt": "^13.6.0",
     "@yunlefun/vue": "^0.1.1",
     "consola": "^3.4.2",
-    "eslint": "^9.24.0",
-    "nuxt": "^3.16.2",
-    "nuxt-monaco-editor": "^1.3.1",
-    "pinia": "^3.0.2",
-    "typescript": "^5.8.3",
+    "eslint": "^9.33.0",
+    "nuxt": "^4.0.3",
+    "nuxt-monaco-editor": "^1.3.2",
+    "pinia": "^3.0.3",
+    "typescript": "^5.9.2",
     "vue-about-me": "^1.4.0",
-    "vue-i18n": "^11.1.3",
-    "vue-tsc": "^2.2.8"
+    "vue-tsc": "^3.0.5"
   }
 }
